test/seq/cmdlists/invalid_ttl1_4.err
SyntaxError: Expecting TTL value after `=`
Line: 3, Column: 8
ttl(2)=
       ^
